--- a/package.json
+++ b/package.json
@@ -5,9 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "electron:build": "vue-cli-service electron:build",
+    "electron:serve": "vue-cli-service electron:serve",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps"
   },
+  "main": "background.js",
   "dependencies": {
+    "chai-as-promised": "^7.1.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
@@ -17,6 +23,7 @@
   "devDependencies": {
     "@types/chai": "^4.2.11",
     "@types/mocha": "^5.2.4",
+    "@types/node": "^12.12.43",
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-router": "~4.4.0",
     "@vue/cli-plugin-typescript": "~4.4.0",
@@ -24,9 +31,12 @@
     "@vue/cli-service": "~4.4.0",
     "@vue/test-utils": "^1.0.3",
     "chai": "^4.1.2",
+    "electron": "^9.0.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
+    "spectron": "^11.0.0",
     "typescript": "~3.9.3",
+    "vue-cli-plugin-electron-builder": "~2.0.0-rc.2",
     "vue-template-compiler": "^2.6.11"
   }
 }
