--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "task-board",
+  "author": "Michał Szyma <michal@szyma.dev>",
   "version": "0.1.0",
-  "private": true,
+  "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -13,6 +14,8 @@
   },
   "main": "background.js",
   "dependencies": {
+    "bootstrap": "^4.5.0",
+    "bootstrap-vue": "^2.15.0",
     "chai-as-promised": "^7.1.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
