--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "bootstrap-vue": "^2.15.0",
     "chai-as-promised": "^7.1.1",
     "core-js": "^3.6.5",
+    "moment": "^2.24.0",
+    "class-transformer": "^0.2.3",
+    "nedb": "^1.8.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
