--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
     "chai-as-promised": "^7.1.1",
+    "class-transformer": "^0.2.3",
     "core-js": "^3.6.5",
     "moment": "^2.24.0",
-    "class-transformer": "^0.2.3",
     "nedb": "^1.8.0",
+    "nedb-promises": "^4.0.3",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
