--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nedb": "^1.8.0",
     "nedb-promises": "^4.0.3",
     "vue": "^2.6.11",
+    "vue-cal": "^3.6.2",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0"
