--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@vue/cli-plugin-typescript": "~4.4.0",
     "@vue/cli-plugin-unit-mocha": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
+    "@vue/devtools": "^5.3.3",
     "@vue/test-utils": "^1.0.3",
     "chai": "^4.1.2",
     "electron": "^9.0.0",
