--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@types/lodash": "^4.14.165",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
     "chai-as-promised": "^7.1.1",
     "class-transformer": "^0.2.3",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "nedb": "^1.8.0",
     "nedb-promises": "^4.0.3",
