Add a Tag parameter to a filter of Task

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "electron:build:linux": "vue-cli-service electron:build --linux deb",
+    "electron:build:linux": "vue-cli-service electron:build --linux",
     "electron:build:mac": "vue-cli-service electron:build --mac dmg",
     "electron:build:win": "vue-cli-service electron:build --win nsis",
     "electron:build": "vue-cli-service electron:build --win nsis --linux deb --mac -p always",
