--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,10 +28,7 @@ jobs:
       with:
         node-version: ${{ matrix.node_version }}
     - name: Set env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        run: echo "RELEASE_VERSION=${git describe}"
     - name: npm install, build and test
       run: |
         npm install
-        echo $RELEASE_VERSION
-        echo ${{ env.RELEASE_VERSION }}
-        git describe
