--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,8 @@ jobs:
       with:
         node-version: ${{ matrix.node_version }}
     - name: Set env
-        run: echo "$(git describe --tags)"
+      run: |
+          echo "$(git describe --tags)"
     - name: npm install, build and test
       run: |
         npm install
