--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,15 @@ jobs:
         node-version: ${{ matrix.node_version }}
     - name: Set env
       run: |
-          echo "$(git describe --tags)"
+          echo "RELEASE_VERSION=$(git describe --tags)" >> $GITHUB_ENV
+          GIT_DESCRIBE="$(git describe --tags)"
+          IFS='-' read -r -a CHUNKS <<< "$GIT_DESCRIBE"
+          TAG=${CHUNKS[0]}
+          TAG_DISTANCE=${CHUNKS[1]}
+          COMMIT_HASH=${CHUNKS[2]}
+          echo $TAG
+          echo $TAG_DISTANCE
+          echo $COMMIT_HASH
     - name: npm install, build and test
       run: |
         npm install
