--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,20 +31,21 @@ jobs:
       run: |
           GIT_DESCRIBE="$(git describe --tags)"
           IFS='-' read -r -a CHUNKS <<< "$GIT_DESCRIBE"
-          TAG=${CHUNKS[0]}
+          VERSION=${CHUNKS[0]:1}
           TAG_DISTANCE=${CHUNKS[1]}
-          COMMIT_HASH=${CHUNKS[2]}
-          echo $TAG
-          echo $TAG_DISTANCE
-          echo $COMMIT_HASH
-          sed -i "s/\"version\": \".*\"/\"version\": \"$TAG\"/" package.json
+          COMMIT_HASH=${CHUNKS[2]:1}
+          echo "Version: $VERSION"
+          echo "Distance: $TAG_DISTANCE"
+          echo "Commit hash: $COMMIT_HASH"
           if [ $TAG_DISTANCE -gt 0 ]
           then
-            sed -i "s/\"version\": \".*\"/\"version\": \"$TAG\"/" package.json
+            sed -i "s/\"version\": \".*\"/\"version\": \"$VERSION\"/" package.json
           else
-            sed -i "s/\"version\": \".*\"/\"version\": \"$TAG+$TAG_DISTANCE-$COMMIT_HASH\"/" package.json
+            sed -i "s/\"version\": \".*\"/\"version\": \"$VERSION+$TAG_DISTANCE-$COMMIT_HASH\"/" package.json
           fi
     - name: npm install, build and test
+      env:
+          GH_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
       run: |
         npm install
         npm run electron:build:linux
