--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,15 +41,10 @@ jobs:
     - name: npm install, build and test (linux-only and ready to release) 
       env:
           GH_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-      if: contains(matrix.os, 'ubuntu') && ${LATEST_TAG_DISTANCE} == '0'  
+          RELEASE_VERSION: "${{ GITHUB_REF#refs/*/ }}"
+      if: contains(matrix.os, 'ubuntu')  
       run: |
-        echo ${LATEST_TAG_DISTANCE}
-        npm install
-        npm run electron:build:linux
-    - name: npm install, build and test (linux-only and only build) 
-      if: contains(matrix.os, 'ubuntu') && ${LATEST_TAG_DISTANCE} != '0'  
-      run: |
-        echo ${LATEST_TAG_DISTANCE}
+        echo ${RELEASE_VERSION}
         npm install
         npm run electron:build:linux
     - uses: actions/upload-artifact@v2
