--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,13 +41,12 @@ jobs:
     - name: npm install, build and test (linux-only and ready to release) 
       env:
           GH_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-          RELEASE_VERSION: "${{ GITHUB_REF#refs/*/ }}"
       if: contains(matrix.os, 'ubuntu')  
       run: |
-        echo ${RELEASE_VERSION}
         npm install
         npm run electron:build:linux
     - uses: actions/upload-artifact@v2
+      if: contains(matrix.os, 'ubuntu')
       with:
         name: my-artifact
         path: dist_electron/task-board*.deb  
