Add version to About view

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,3 +51,4 @@ jobs:
         path: |
           dist_electron/task-board*.deb
           dist_electron/task-board*.exe
+          if-no-files-found: ignore
