--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chai-as-promised": "^7.1.1",
     "class-transformer": "^0.2.3",
     "core-js": "^3.6.5",
+    "electron-typed-ipc": "^0.1.0",
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "nedb": "^1.8.0",
