--- a/package.json
+++ b/package.json
@@ -1,25 +1,17 @@
 {
   "name": "task-board",
-  "author": "Michał Szyma <szyma.michael@gmail.com>",
-  "commitHash": "000000",
-  "description": "This is a task management tool",
-  "engines": {
-    "node": "10.x"
-  },
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/raglub/task-board.git"
-  },
   "version": "0.1.0",
+  "description": "This is a task management tool",
+  "author": "Michał Szyma <szyma.michael@gmail.com>",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
+    "lint": "vue-cli-service lint",
+    "electron:build": "vue-cli-service electron:build --win nsis --linux deb --mac -p always",
     "electron:build:linux": "vue-cli-service electron:build --linux",
     "electron:build:mac": "vue-cli-service electron:build --mac dmg",
     "electron:build:win": "vue-cli-service electron:build --win nsis --x64",
-    "electron:build": "vue-cli-service electron:build --win nsis --linux deb --mac -p always",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
@@ -48,21 +40,41 @@
     "@types/chai": "^4.2.11",
     "@types/mocha": "^5.2.4",
     "@types/node": "^12.12.43",
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.4.0",
+    "@vue/cli-plugin-eslint": "^4.5.11",
     "@vue/cli-plugin-router": "~4.4.0",
     "@vue/cli-plugin-typescript": "~4.4.0",
     "@vue/cli-plugin-unit-mocha": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
     "@vue/devtools": "^5.3.3",
+    "@vue/eslint-config-standard": "^5.1.2",
+    "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "^1.0.3",
     "chai": "^4.1.2",
     "electron": "^9.0.0",
     "electron-builder": "^22.2.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "spectron": "^13.0.0",
     "typescript": "~3.9.3",
     "vue-cli-plugin-electron-builder": "~2.0.0-rc.2",
     "vue-template-compiler": "^2.6.11"
+  },
+  "commitHash": "000000",
+  "engines": {
+    "node": "10.x"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/raglub/task-board.git"
   }
 }
