--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,8 @@
     // Insert spaces when pressing Tab.
     "editor.insertSpaces": true,
     // When opening a file, `editor.tabSize` and `editor.insertSpaces` will be detected based on the file contents.
-    "editor.detectIndentation": true
+    "editor.detectIndentation": true,
+    "[typescript]": {
+        "editor.tabSize": 2
+    }
 }
