#2 Add pagination to Board view.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chai-as-promised": "^7.1.1",
     "class-transformer": "^0.3.1",
     "core-js": "^3.6.5",
+    "direct-vuex": "^0.12.1",
     "electron-typed-ipc": "^0.1.0",
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
