--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue": "^2.6.11",
     "vue-cal": "^3.6.2",
     "vue-class-component": "^7.2.3",
+    "vue-flatpickr-component": "^8.1.6",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.5.1"
